# homebrew-parasync

./: README.md  noxfile.py  parasync.rb  pyproject.toml  test.py
src/parasync/: main.py
src/parsync/: __init__.py
