[project]
name = "parsync"
authors = [
    {name = "Rio Fujita", email = "rifujita@microsoft.com"},
]
version = "0.1.0"
license = {file = "LICENSE"}
description = "parsync is a parallelized rsync tool written in Python."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psutil>=6.1.1",
]

[project.scripts]
parsync = "parsync.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parsync"]

[project.urls]
Homepage = "https://github.com/rioriost/homebrew-parsync"
Issues = "https://github.com/rioriost/homebrew-parsync/issues"

[tool.hatch.build.targets.sdist]
include = [
  "src/parsync/*.py",
  "*.py",
]
exclude = [
  "parsync.rb",
  "uv.lock",
  "dist/.DS_Store",
]
