[project]
name = "parasync"
authors = [
    {name = "Rio Fujita", email = "rifujita@microsoft.com"},
]
version = "0.1.6"
license = {file = "LICENSE"}
description = "parasync is a parallelized rsync tool written in Python."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
dependencies = [
    "psutil>=7.2.1",
]

[project.scripts]
parasync = "parasync.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parasync"]

[project.urls]
Homepage = "https://github.com/rioriost/homebrew-parasync"
Issues = "https://github.com/rioriost/homebrew-parasync/issues"

[tool.hatch.build.targets.sdist]
include = [
  "src/parasync/*.py",
  "*.py",
]
exclude = [
  "parasync.rb",
  "uv.lock",
  "dist/.DS_Store",
  ".envrc",
]
